<resources>
    <string name="app_name">Techapp</string>
    <string name="preferences">Preferences</string>
    <string name="source">Source:</string>
    <string name="john_doe">John doe</string>
    <string name="author">Author:</string>
    <string name="date">Date:</string>
    <string name="check_this_out">check this out</string>
    <string name="poweredby_news_api">poweredby News API</string>
    <string name="enter_search_string">Enter Search String</string>
    <string name="search">Search</string>
</resources>
