<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="#eee"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize" />

    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/image"
        android:layout_height="140dp"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_width="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/news_title"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/news_body"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/source"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/source"
                    android:text="@string/john_doe"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/author"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/author"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/date"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/date"
                    android:layout_height="wrap_content" />

            </LinearLayout>



        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:background="@color/colorAccent"
        android:textColor="#fff"
        android:layout_marginTop="30dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/check_this_out"
        android:id="@+id/link_out"
        android:layout_width="wrap_content"
        android:layout_height="40dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/poweredby_news_api"
        android:layout_height="wrap_content" />

</LinearLayout>

